--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+import org.w3c.dom.CDATASection
+
 /*
  * Copyright (C) 2020 The Android Open Source Project
  *
@@ -47,7 +49,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+        dataBinding true
     }
 }
 
